Fix: Use --legacy-peer-deps for Next.js canary version compatibility

--- a/amplify.yml
+++ b/amplify.yml
@@ -3,7 +3,7 @@ frontend:
   phases:
     preBuild:
       commands:
-        - npm ci
+        - npm install --legacy-peer-deps
         - npx prisma generate
     build:
       commands:
