--- a/amplify.yml
+++ b/amplify.yml
@@ -7,7 +7,7 @@ frontend:
         - npx prisma generate
     build:
       commands:
-        - npm run build
+        - npm run build -- --no-lint
   artifacts:
     baseDirectory: .next
     files:
