--- a/amplify.yml
+++ b/amplify.yml
@@ -5,6 +5,7 @@ frontend:
       commands:
         - npm install --legacy-peer-deps
         - npx prisma generate
+        - npx prisma db push --accept-data-loss
     build:
       commands:
         - npm run build -- --no-lint
