--- a/amplify.yml
+++ b/amplify.yml
@@ -7,6 +7,8 @@ frontend:
         - echo "DATABASE_URL exists:" $DATABASE_URL
         - echo "NEXTAUTH_URL exists:" $NEXTAUTH_URL
         - npm install --legacy-peer-deps
+        - echo "Pushing Prisma schema to database..."
+        - npx prisma db push --accept-data-loss
         - echo "Generating Prisma client..."
         - npx prisma generate
     build:
