--- a/amplify-staging.yml
+++ b/amplify-staging.yml
@@ -3,12 +3,12 @@ frontend:
   phases:
     preBuild:
       commands:
-        - echo "🔧 STAGING ENVIRONMENT DEPLOYMENT"
-        - echo "Environment variables loading test..."
+        - echo "STAGING ENVIRONMENT - Formal migration workflow"
+        - echo "Environment variables check..."
         - echo "DATABASE_URL exists:" $DATABASE_URL
         - echo "NEXTAUTH_URL exists:" $NEXTAUTH_URL
         - npm install --legacy-peer-deps
-        - echo "Applying database migrations to staging..."
+        - echo "Running Prisma migrations (staging)..."
         - npx prisma migrate deploy
         - echo "Generating Prisma client..."
         - npx prisma generate
