debug: Add DIRECT_URL to build logs to help troubleshoot

--- a/amplify.yml
+++ b/amplify.yml
@@ -5,6 +5,7 @@ frontend:
       commands:
         - echo "Environment variables check..."
         - echo "DATABASE_URL exists:" $DATABASE_URL
+        - echo "DIRECT_URL exists:" $DIRECT_URL
         - echo "NEXTAUTH_URL exists:" $NEXTAUTH_URL
         - |
           if [[ "$DATABASE_URL" == *"misty-frog"* ]]; then
