test: Try DATABASE_DIRECT_URL alternative to troubleshoot DIRECT_URL runtime issue

--- a/amplify.yml
+++ b/amplify.yml
@@ -6,6 +6,7 @@ frontend:
         - echo "Environment variables check..."
         - echo "DATABASE_URL exists:" $DATABASE_URL
         - echo "DIRECT_URL exists:" $DIRECT_URL
+        - echo "DATABASE_DIRECT_URL exists:" $DATABASE_DIRECT_URL
         - echo "NEXTAUTH_URL exists:" $NEXTAUTH_URL
         - |
           if [[ "$DATABASE_URL" == *"misty-frog"* ]]; then
