--- a/amplify.yml
+++ b/amplify.yml
@@ -5,10 +5,12 @@ frontend:
       commands:
         - echo "Environment variables check..."
         - echo "DATABASE_URL exists:" $DATABASE_URL
-        - echo "DIRECT_URL exists:" $DIRECT_URL
-        - echo "DATABASE_DIRECT_URL exists:" $DATABASE_DIRECT_URL
-        - echo "NEON_CONNECTION_URL exists:" $NEON_CONNECTION_URL
+        - echo "DATABASE_MIGRATION_URL exists:" $DATABASE_MIGRATION_URL
         - echo "NEXTAUTH_URL exists:" $NEXTAUTH_URL
+        - echo "Legacy DIRECT vars (should be empty):"
+        - echo "  DIRECT_URL:" $DIRECT_URL
+        - echo "  DATABASE_DIRECT_URL:" $DATABASE_DIRECT_URL
+        - echo "NEON_CONNECTION_URL exists:" $NEON_CONNECTION_URL
         - |
           if [[ "$DATABASE_URL" == *"misty-frog"* ]]; then
             echo "🚀 PRODUCTION ENVIRONMENT - Formal migration workflow"
