fix: resolve dependency conflicts in CI by adding --legacy-peer-deps flag

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,7 @@ jobs:
         cache: 'npm'
 
     - name: 📥 Install dependencies
-      run: npm ci
+      run: npm ci --legacy-peer-deps
 
     - name: 🗄️ Setup test database
       env:
@@ -165,7 +165,7 @@ jobs:
         cache: 'npm'
 
     - name: 📥 Install dependencies
-      run: npm ci
+      run: npm ci --legacy-peer-deps
 
     - name: 🔥 Run smoke tests
       env:
