--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -36,7 +36,7 @@ jobs:
         cache: 'npm'
 
     - name: 📥 Install dependencies
-      run: npm ci
+      run: npm ci --legacy-peer-deps
 
     - name: 🗄️ Setup test database
       env:
@@ -76,7 +76,7 @@ jobs:
         cache: 'npm'
 
     - name: 📥 Install dependencies
-      run: npm ci
+      run: npm ci --legacy-peer-deps
 
     - name: 🎭 Run BDD feature tests
       env:
@@ -110,7 +110,7 @@ jobs:
         cache: 'npm'
 
     - name: 📥 Install dependencies
-      run: npm ci
+      run: npm ci --legacy-peer-deps
 
     - name: 🎯 Run ${{ matrix.feature }} feature tests
       env:
