--- a/.github/workflows/fast-tests.yml
+++ b/.github/workflows/fast-tests.yml
@@ -24,7 +24,7 @@ jobs:
         cache: 'npm'
 
     - name: 📥 Install dependencies
-      run: npm ci
+      run: npm ci --legacy-peer-deps
 
     - name: 🔍 Type checking
       run: npm run type-check
