--- a/.github/workflows/fast-tests.yml
+++ b/.github/workflows/fast-tests.yml
@@ -2,7 +2,7 @@ name: 🚀 Fast Tests (Stage 1)
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ main, develop, 'feature/**' ]
   pull_request:
     branches: [ main, develop ]
 
@@ -49,6 +49,15 @@ jobs:
     steps:
     - name: 📦 Checkout code
       uses: actions/checkout@v4
+
+    - name: 🏗️ Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20.x'
+        cache: 'npm'
+
+    - name: 📥 Install dependencies
+      run: npm ci --legacy-peer-deps
 
     - name: 🔒 Run security audit
       run: npm audit --audit-level=moderate
