feat: enable real database connectivity testing with environment secrets

--- a/.github/workflows/environment-deployment.yml
+++ b/.github/workflows/environment-deployment.yml
@@ -64,6 +64,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [detect-environment]
     if: needs.detect-environment.outputs.environment != 'feature'
+    environment: ${{ needs.detect-environment.outputs.environment }}
     steps:
       - uses: actions/checkout@v4
       
@@ -78,19 +79,21 @@ jobs:
         
       - name: Validate Prisma Schema
         env:
-          DATABASE_MIGRATION_URL: postgresql://placeholder:placeholder@localhost:5432/placeholder_db
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          DATABASE_MIGRATION_URL: ${{ secrets.DATABASE_MIGRATION_URL }}
         run: npx prisma validate
         
       - name: Generate Prisma Client
         env:
-          DATABASE_MIGRATION_URL: postgresql://placeholder:placeholder@localhost:5432/placeholder_db
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          DATABASE_MIGRATION_URL: ${{ secrets.DATABASE_MIGRATION_URL }}
         run: npx prisma generate
         
-      # TODO: Add database connectivity test when env vars are available
-      # - name: Test Database Connection
-      #   run: npx prisma db execute --command "SELECT 1"
-      #   env:
-      #     DATABASE_URL: ${{ secrets[format('DATABASE_URL_{0}', upper(needs.detect-environment.outputs.environment))] }}
+      - name: Test Database Connection
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          DATABASE_MIGRATION_URL: ${{ secrets.DATABASE_MIGRATION_URL }}
+        run: npx prisma db execute --command "SELECT 1" --schema prisma/schema.prisma
 
   deployment-ready:
     runs-on: ubuntu-latest
