refactor: split workflows into industry standard PR validation and deployment pipeline

--- a/.github/workflows/environment-deployment.yml
+++ b/.github/workflows/environment-deployment.yml
@@ -1,13 +1,11 @@
-name: Environment Deployment Strategy
+name: 🚀 Deployment Pipeline
 
 on:
   push:
     branches: [main, staging, develop]
-  pull_request:
-    branches: [main, staging, develop]
 
 env:
-  NODE_VERSION: '18'
+  NODE_VERSION: '20'
 
 jobs:
   detect-environment:
@@ -19,21 +17,15 @@ jobs:
       - name: Detect Environment
         id: detect
         run: |
-          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
-            # For pull requests, use the target branch
-            TARGET_BRANCH="${{ github.base_ref }}"
-          else
-            # For push events, use the current branch
-            TARGET_BRANCH="${{ github.ref_name }}"
-          fi
+          BRANCH="${{ github.ref_name }}"
           
-          if [[ "$TARGET_BRANCH" == "main" ]]; then
+          if [[ "$BRANCH" == "main" ]]; then
             echo "environment=production" >> $GITHUB_OUTPUT
             echo "deploy=true" >> $GITHUB_OUTPUT
-          elif [[ "$TARGET_BRANCH" == "staging" ]]; then
+          elif [[ "$BRANCH" == "staging" ]]; then
             echo "environment=staging" >> $GITHUB_OUTPUT
             echo "deploy=true" >> $GITHUB_OUTPUT
-          elif [[ "$TARGET_BRANCH" == "develop" ]]; then
+          elif [[ "$BRANCH" == "develop" ]]; then
             echo "environment=development" >> $GITHUB_OUTPUT
             echo "deploy=true" >> $GITHUB_OUTPUT
           else
@@ -41,7 +33,7 @@ jobs:
             echo "deploy=false" >> $GITHUB_OUTPUT
           fi
 
-  test:
+  code-quality:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -59,20 +51,16 @@ jobs:
         run: npx prisma generate
         
       - name: Lint
-        run: npm run lint
+        run: npm run lint:ci
         
       - name: Type Check
-        run: npx tsc --noEmit
-        
-      # Add tests when available
-      # - name: Run Tests
-      #   run: npm test
+        run: npm run type-check
 
   validate-schema:
     runs-on: ubuntu-latest
     needs: [detect-environment]
     if: needs.detect-environment.outputs.environment != 'feature'
-    environment: ${{ github.event_name == 'push' && needs.detect-environment.outputs.environment || null }}
+    environment: ${{ needs.detect-environment.outputs.environment }}
     steps:
       - uses: actions/checkout@v4
       
@@ -87,30 +75,25 @@ jobs:
         
       - name: Validate Prisma Schema
         env:
-          DATABASE_URL: ${{ github.event_name == 'push' && secrets.DATABASE_URL || 'postgresql://placeholder:placeholder@localhost:5432/placeholder_db' }}
-          DATABASE_MIGRATION_URL: ${{ github.event_name == 'push' && secrets.DATABASE_MIGRATION_URL || 'postgresql://placeholder:placeholder@localhost:5432/placeholder_db' }}
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          DATABASE_MIGRATION_URL: ${{ secrets.DATABASE_MIGRATION_URL }}
         run: npx prisma validate
         
       - name: Generate Prisma Client
         env:
-          DATABASE_URL: ${{ github.event_name == 'push' && secrets.DATABASE_URL || 'postgresql://placeholder:placeholder@localhost:5432/placeholder_db' }}
-          DATABASE_MIGRATION_URL: ${{ github.event_name == 'push' && secrets.DATABASE_MIGRATION_URL || 'postgresql://placeholder:placeholder@localhost:5432/placeholder_db' }}
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          DATABASE_MIGRATION_URL: ${{ secrets.DATABASE_MIGRATION_URL }}
         run: npx prisma generate
         
       - name: Test Database Connection
-        if: github.event_name == 'push'
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
           DATABASE_MIGRATION_URL: ${{ secrets.DATABASE_MIGRATION_URL }}
         run: echo "SELECT 1;" | npx prisma db execute --stdin --schema prisma/schema.prisma
-        
-      - name: Skip Database Connection Test (PR)
-        if: github.event_name == 'pull_request'
-        run: echo "⏭️ Skipping database connectivity test for pull request (security)"
 
   deployment-ready:
     runs-on: ubuntu-latest
-    needs: [detect-environment, test, validate-schema]
+    needs: [detect-environment, code-quality, validate-schema]
     if: always() && needs.detect-environment.outputs.deploy == 'true'
     steps:
       - name: Deployment Status
@@ -131,7 +114,7 @@ jobs:
 
   notify-deployment:
     runs-on: ubuntu-latest
-    needs: [detect-environment, test, validate-schema]
+    needs: [detect-environment, code-quality, validate-schema]
     if: failure()
     steps:
       - name: Deployment Failure
@@ -141,4 +124,5 @@ jobs:
           echo "📋 Common issues:"
           echo "  • Linting errors"
           echo "  • TypeScript compilation errors"  
-          echo "  • Prisma schema validation errors" 
+          echo "  • Prisma schema validation errors"
+          echo "  • Database connectivity issues" 
