--- a/package.json
+++ b/package.json
@@ -14,23 +14,19 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    
     "test:fast": "jest tests/unit tests/fixtures --passWithNoTests",
     "test:integration": "jest tests/integration tests/features/api --passWithNoTests",
     "test:bdd": "jest tests/bdd tests/features --passWithNoTests",
     "test:features": "jest tests/features --passWithNoTests",
     "test:e2e": "jest tests/e2e --passWithNoTests",
-    
     "test:ci:fast": "jest tests/unit tests/fixtures --ci --coverage=false --passWithNoTests",
-    "test:ci:integration": "jest tests/integration tests/features/api --ci --coverage=false --passWithNoTests", 
+    "test:ci:integration": "jest tests/integration tests/features/api --ci --coverage=false --passWithNoTests",
     "test:ci:all": "jest --ci --coverage --passWithNoTests",
     "test:ci:smoke": "jest tests/e2e/smoke --ci --coverage=false --passWithNoTests",
-    
     "test:feature:auth": "jest tests/features/authentication --passWithNoTests",
     "test:feature:projects": "jest tests/features/projects --passWithNoTests",
     "test:feature:api": "jest tests/features/api --passWithNoTests",
     "test:feature:components": "jest tests/features/components --passWithNoTests",
-    
     "lint:check": "next lint --max-warnings 0",
     "lint:ci": "next lint --max-warnings 20",
     "type-check": "tsc --noEmit",
@@ -47,10 +43,12 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.1",
+    "@aws-sdk/client-cloudwatch-logs": "^3.821.0",
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.8.2",
     "@supabase/supabase-js": "^2.39.0",
     "@types/pg": "^8.15.2",
+    "@types/uuid": "^10.0.0",
     "clsx": "^2.0.0",
     "date-fns": "^3.0.0",
     "next": "15.4.0-canary.51",
@@ -59,7 +57,9 @@
     "prisma": "^6.8.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwind-merge": "^2.2.0"
+    "tailwind-merge": "^2.2.0",
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
