--- a/amplify.yml
+++ b/amplify.yml
@@ -34,6 +34,13 @@ frontend:
         - npx prisma generate
     build:
       commands:
+        - echo "Injecting environment variables for Next.js runtime..."
+        - env | grep -e NAILIT_ENVIRONMENT >> .env.production || echo "NAILIT_ENVIRONMENT not set"
+        - env | grep -e NAILIT_AWS_REGION >> .env.production || echo "NAILIT_AWS_REGION not set"  
+        - env | grep -e LOG_LEVEL >> .env.production || echo "LOG_LEVEL not set"
+        - env | grep -e DISABLE_CLOUDWATCH_LOGS >> .env.production || echo "DISABLE_CLOUDWATCH_LOGS not set"
+        - echo "Contents of .env.production:"
+        - cat .env.production || echo "No .env.production file created"
         - npm run build -- --no-lint
   artifacts:
     baseDirectory: .next
