--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "eslint-config-next": "15.4.0-canary.51",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^30.0.0-beta.3",
+    "jest-mock-extended": "^4.0.0",
     "msw": "^2.8.7",
     "node-mocks-http": "^1.17.2",
     "postcss": "^8.4.32",
