feat: Add comprehensive OpenAPI documentation with Redoc
- Replace Swagger UI with Redoc for React strict mode compatibility
- Add JSDoc @swagger comments to all production API endpoints
- Document Projects, Flagged Items, Timeline, and Email endpoints
- Include request/response schemas and parameter documentation
- Enable interactive API testing through Redoc interface
- Maintain React strict mode without deprecation warnings
- Install required dependencies: redoc, mobx, mobx-react-lite, styled-components

Endpoints documented:
- Projects: GET, POST, PATCH, DELETE
- Flagged Items: GET, PATCH
- Timeline: GET
- Email: OAuth flow, webhooks, connection status, processing
- Health: Application health check
- Projects Simple: Simplified project list

API docs available at /api-docs with beautiful, responsive UI

--- a/package.json
+++ b/package.json
@@ -51,12 +51,17 @@
     "@types/uuid": "^10.0.0",
     "clsx": "^2.0.0",
     "date-fns": "^3.0.0",
+    "mobx": "^6.13.7",
+    "mobx-react-lite": "^4.1.0",
     "next": "15.4.0-canary.51",
     "next-auth": "^4.24.11",
+    "next-swagger-doc": "^0.4.1",
     "pg": "^8.16.0",
     "prisma": "^6.8.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "redoc": "^2.5.0",
+    "styled-components": "^6.1.19",
     "tailwind-merge": "^2.2.0",
     "uuid": "^11.1.0",
     "winston": "^3.17.0"
