Optimize Amplify build size by cleaning up unnecessary artifacts
- Remove webpack cache (.next/cache) from deployment artifacts
- Delete source maps (*.map files) to reduce bundle size
- Specify explicit artifact files instead of including everything
- Add build cleanup commands to reduce deployment size from ~178MB to ~6MB (97% reduction)
- This should resolve the Amplify build size limit error (490MB > 230MB limit)

Build artifacts now only include necessary files:
- static assets
- server files
- Next.js manifests and configuration
- Required runtime files

--- a/amplify.yml
+++ b/amplify.yml
@@ -46,7 +46,23 @@ frontend:
         - echo "Contents of .env.production:"
         - cat .env.production || echo "No .env.production file created"
         - npm run build -- --no-lint
+        - echo "Cleaning up build artifacts to reduce deployment size..."
+        - rm -rf .next/cache
+        - find .next -name "*.map" -delete
+        - echo "Build output size after cleanup:"
+        - du -sh .next
   artifacts:
     baseDirectory: .next
     files:
-      - '**/*' 
+      - 'static/**/*'
+      - 'server/**/*'
+      - 'BUILD_ID'
+      - 'app-build-manifest.json'
+      - 'build-manifest.json'
+      - 'export-marker.json'
+      - 'next-server.js.nft.json'
+      - 'package.json'
+      - 'prerender-manifest.json'
+      - 'required-server-files.json'
+      - 'routes-manifest.json'
+      - 'trace' 
