Refine Amplify build optimization with clean deployment directory
- Create isolated /tmp/deploy directory with only essential files
- Copy cleaned .next directory (cache removed, source maps deleted)
- Include public directory and minimal package.json
- Use /tmp/deploy as baseDirectory to avoid including project files
- Final deployment size: ~6.8MB vs previous 490MB

This approach ensures Amplify only deploys the minimal required files:
- Next.js build output (.next)
- Static assets (public)
- Runtime package.json
- No node_modules, git history, or development files

--- a/amplify.yml
+++ b/amplify.yml
@@ -5,7 +5,7 @@ frontend:
       commands:
         - echo "Environment variables check..."
         - echo "DATABASE_URL exists:" $DATABASE_URL
-        - echo "DATABASE_MIGRATION_URL exists:" $DATABASE_MIGRATION_URL
+        - echo "DATABASE_MIGRATION_URL exists:" $DATABASE_URL
         - echo "NEXTAUTH_URL exists:" $NEXTAUTH_URL
         - |
           if [[ "$DATABASE_URL" == *"misty-frog"* ]]; then
@@ -46,23 +46,18 @@ frontend:
         - echo "Contents of .env.production:"
         - cat .env.production || echo "No .env.production file created"
         - npm run build -- --no-lint
-        - echo "Cleaning up build artifacts to reduce deployment size..."
+        - echo "Creating optimized deployment directory..."
+        - mkdir -p /tmp/deploy
+        - echo "Cleaning up .next directory..."
         - rm -rf .next/cache
         - find .next -name "*.map" -delete
-        - echo "Build output size after cleanup:"
-        - du -sh .next
+        - echo "Copying essential files to deployment directory..."
+        - cp -r .next /tmp/deploy/
+        - cp -r public /tmp/deploy/ 2>/dev/null || echo "No public directory"
+        - echo '{"name":"nailit","type":"module"}' > /tmp/deploy/package.json
+        - echo "Final deployment size:"
+        - du -sh /tmp/deploy
   artifacts:
-    baseDirectory: .next
+    baseDirectory: /tmp/deploy
     files:
-      - 'static/**/*'
-      - 'server/**/*'
-      - 'BUILD_ID'
-      - 'app-build-manifest.json'
-      - 'build-manifest.json'
-      - 'export-marker.json'
-      - 'next-server.js.nft.json'
-      - 'package.json'
-      - 'prerender-manifest.json'
-      - 'required-server-files.json'
-      - 'routes-manifest.json'
-      - 'trace' 
+      - '**/*' 
