--- a/amplify.yml
+++ b/amplify.yml
@@ -48,38 +48,35 @@ frontend:
         - npm run build -- --no-lint
         - echo "=== AGGRESSIVE DEPLOYMENT OPTIMIZATION ==="
         - echo "Creating clean deployment directory..."
-        - rm -rf /tmp/deploy
-        - mkdir -p /tmp/deploy
+        - rm -rf ./deploy
+        - mkdir -p ./deploy
         - echo "Cleaning up .next directory..."
         - rm -rf .next/cache
         - rm -rf .next/trace
         - find .next -name "*.map" -delete
         - find .next -name "*.txt" -delete
         - echo "Copying only essential Next.js files..."
-        - mkdir -p /tmp/deploy/.next
-        - cp -r .next/static /tmp/deploy/.next/ 2>/dev/null || echo "No static directory"
-        - cp -r .next/server /tmp/deploy/.next/ 2>/dev/null || echo "No server directory"
-        - cp .next/BUILD_ID /tmp/deploy/.next/ 2>/dev/null || echo "No BUILD_ID"
-        - cp .next/*.json /tmp/deploy/.next/ 2>/dev/null || echo "No JSON files"
+        - mkdir -p ./deploy/.next
+        - cp -r .next/static ./deploy/.next/ 2>/dev/null || echo "No static directory"
+        - cp -r .next/server ./deploy/.next/ 2>/dev/null || echo "No server directory"
+        - cp .next/BUILD_ID ./deploy/.next/ 2>/dev/null || echo "No BUILD_ID"
+        - cp .next/*.json ./deploy/.next/ 2>/dev/null || echo "No JSON files"
         - echo "Copying public assets..."
-        - cp -r public /tmp/deploy/ 2>/dev/null || echo "No public directory"
+        - cp -r public ./deploy/ 2>/dev/null || echo "No public directory"
         - echo "Creating minimal package.json..."
-        - echo '{"name":"nailit","type":"module"}' > /tmp/deploy/package.json
+        - echo '{"name":"nailit","type":"module"}' > ./deploy/package.json
         - echo "=== DEPLOYMENT SIZE ANALYSIS ==="
         - echo "Total deployment size:"
-        - du -sh /tmp/deploy
+        - du -sh ./deploy
         - echo "Breakdown by directory:"
-        - du -sh /tmp/deploy/* 2>/dev/null || echo "No subdirectories"
+        - du -sh ./deploy/* 2>/dev/null || echo "No subdirectories"
         - echo "File count:"
-        - find /tmp/deploy -type f | wc -l
+        - find ./deploy -type f | wc -l
         - echo "Largest files (>1MB):"
-        - find /tmp/deploy -type f -size +1M -exec ls -lh {} \; 2>/dev/null || echo "No large files"
+        - find ./deploy -type f -size +1M -exec ls -lh {} \; 2>/dev/null || echo "No large files"
+        - echo "Verifying deployment directory exists:"
+        - ls -la ./deploy
   artifacts:
-    baseDirectory: /tmp/deploy
+    baseDirectory: deploy
     files:
-      - '.next/static/**/*'
-      - '.next/server/**/*'
-      - '.next/BUILD_ID'
-      - '.next/*.json'
-      - 'public/**/*'
-      - 'package.json' 
+      - '**/*' 
